fixed project container size on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -232,7 +232,7 @@ header > a {
   height: 280px;
   max-width: calc(100vw - 40px);
   max-height: calc(100vw - 40px);
-  margin: 10px;
+
 }
 
 .project-card {
@@ -248,7 +248,7 @@ header > a {
   background-repeat: no-repeat;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   transition: all 0.2s;
-  margin: 10px;
+
 }
 
 .project-card:hover {
@@ -338,11 +338,12 @@ footer > p {
       background-size: 200%;
   }
   .project-card {
-    max-width: 65vw;
+    max-width: calc(100vw - 40px);
     max-height: calc(100vw - 40px);
   }
+
   .contact-information > h1 {
-    font-size: 35px;
+    font-size: 30px;
   }
   .header {
       padding-top: 30px;
