--- a/src/project.css
+++ b/src/project.css
@@ -62,11 +62,12 @@ a:hover {
     background: rgba(255, 255, 255, 0.9);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     max-width: 1000px;
-    width: calc(100% - 2 * 25px);
+    width: calc(100%);
     padding: 25px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
 .back-container {
@@ -84,13 +85,13 @@ a:hover {
     font-size: 25px;
     align-items: left;
 }
-p{
+p {
     padding-top: 10px;
-  }
+}
   
-  h2 {
+h2 {
     padding-top: 20px;
-  }
+}
 
 .project-details {
     width: 100%;
